[package]
name = "tempref"
version = "0.3.0"
edition = "2024"
authors = ["Yua"]
license = "MIT OR Apache-2.0"
description = "This crate provides a type whose value remains unchanged even when accessed through a mutable reference."
keywords = ["guard", "reset", "buffer", "scope", "temp"]
categories = ["no-std", "data-structures", "memory-management", "concurrency"]
repository = "https://github.com/yua134/tempref"
exclude = [
    ".gitignore",
    ".github/*",
    "target/*"
]

[features]
default = ["all"]
all = ["unsync", "mutex", "rwlock"]
no_std = ["unsync"]
unsync = []
mutex = []
rwlock = []